Seite 1+2 mit Standard-Pipes soweit fertig.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,52 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Standard-Pipes: Groß-/Kleinschreibung
     </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list>
+
+    <ion-item>
+      <ion-label>
+        <h1>Vor- und Nachname ohne Pipe</h1>
+        <h2>{{vorUndNachname}}</h2>
+      </ion-label>
+    </ion-item>
+
+    &nbsp;
+
+    <ion-item>
+      <ion-label>
+        <h1>Vor- und Nachname durch Pipe <i>uppercase</i></h1>
+        <h2>{{ vorUndNachname | uppercase }}</h2>
+      </ion-label>
+    </ion-item>
+
+    &nbsp;
+
+    <ion-item>
+      <ion-label>
+        <h1>Vor- und Nachname durch Pipe <i>lowercase</i></h1>
+        <h2>{{ vorUndNachname | lowercase }}</h2>
+      </ion-label>
+    </ion-item>
+
+    &nbsp;
+
+    <ion-item>
+      <ion-label>
+        <h1>Vor- und Nachname durch Pipe <i>titlecase</i></h1>
+        <h2>{{ vorUndNachname | titlecase }}</h2>
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
+
 </ion-content>
