Custom Pipe "stringMitLaenge" funktioniert jetzt (in eigenes Modul ausgelagert).

--- a/src/app/seite3/seite3.page.html
+++ b/src/app/seite3/seite3.page.html
@@ -27,6 +27,13 @@
       </ion-label>
     </ion-item>
 
+    <ion-item>
+      <ion-label>
+        <h1>Satz durch Pipe <i>stringMitLaenge</i> und dann noch durch <i>uppercase</i></h1>
+        <h2>{{ einSatz | stringMitLaenge | uppercase }}</h2>
+      </ion-label>
+    </ion-item>
+
   </ion-list>
 
 </ion-content>
