Doku in string-mit-laenge.pipe.ts verbessert

--- a/src/app/seite3/seite3.page.html
+++ b/src/app/seite3/seite3.page.html
@@ -29,7 +29,7 @@
 
     <ion-item>
       <ion-label>
-        <h1>Satz durch Pipe <i>stringMitLaenge</i> und dann noch durch <i>uppercase</i></h1>
+        <h1>Satz durch Pipe <i>stringMitLaenge</i> und dann durch <i>uppercase</i></h1>
         <h2>{{ einSatz | stringMitLaenge | uppercase }}</h2>
       </ion-label>
     </ion-item>
