--- a/src/app/seite2/seite2.page.html
+++ b/src/app/seite2/seite2.page.html
@@ -92,7 +92,7 @@
 
     <ion-item>
       <ion-label>
-        <h1>Datum durch Pipe <i>date:'EEEE'</i></h1>
+        <h1>Datum durch Pipe <i>date:'EEEE'</i> (Wochentag)</h1>
         <h2>{{ aktuellesDatum | date:'EEEE' }}</h2>
       </ion-label>
     </ion-item>        
