--- a/src/app/seite5/seite5.page.html
+++ b/src/app/seite5/seite5.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Promise-Objekt mit Pipe auflösen
+      Ergebnis anzeigen
     </ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
@@ -15,18 +15,12 @@
 
     <ion-item>
       <ion-label>
-        <h1>Promise ohne Pipe</h1>
-        <h2>{{ temperaturPromise }} Grad</h2>
-      </ion-label>
-    </ion-item>
-
-    <ion-item>
-      <ion-label>
-        <h1>Promise durch Pipe <i>async</i></h1>
-        <h2>{{ temperaturPromise | async }} Grad</h2>
+        <h2>Das Ergebnis der Berechnung lautet: {{ abc }}</h2>
       </ion-label>
     </ion-item>
 
   </ion-list>
 
 </ion-content>
+
+
