--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,9 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>
-      Standard-Pipes: Groß-/Kleinschreibung
-    </ion-title>    
+    <ion-title>Standard-Pipes: Groß-/Kleinschreibung</ion-title>
   </ion-toolbar>
 </ion-header>
 
