--- a/src/app/seite3/seite3.page.html
+++ b/src/app/seite3/seite3.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Eigene Pipe ohne Argumente
-    </ion-title>
+    <ion-title>Eigene Pipe ohne Argumente</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
