--- a/src/app/seite4/seite4.page.html
+++ b/src/app/seite4/seite4.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Eigene Pipe mit Argumenten
-    </ion-title>
+    <ion-title>Eigene Pipe mit Argumenten</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
@@ -25,28 +23,28 @@
         <h1>Zahl mit Pipe <i>prozentwert</i></h1>
         <h2>{{ ergebnis | prozentwert }}</h2>
       </ion-label>
-    </ion-item>    
+    </ion-item>
 
     <ion-item>
       <ion-label>
         <h1>Zahl mit Pipe <i>prozentwert:21</i></h1>
         <h2>{{ ergebnis | prozentwert:21 }}</h2>
       </ion-label>
-    </ion-item>    
+    </ion-item>
 
     <ion-item>
       <ion-label>
         <h1>Zahl mit Pipe <i>prozentwert:255</i></h1>
         <h2>{{ ergebnis | prozentwert:255 }}</h2>
       </ion-label>
-    </ion-item>    
+    </ion-item>
 
     <ion-item>
       <ion-label>
         <h1>Zahl mit Pipe <i>prozentwert:255:2</i></h1>
         <h2>{{ ergebnis | prozentwert:255:2 }}</h2>
       </ion-label>
-    </ion-item>    
+    </ion-item>
 
   </ion-list>
 
