--- a/src/app/seite5/seite5.page.html
+++ b/src/app/seite5/seite5.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Promise-Objekt mit Pipe auflösen
-    </ion-title>
+    <ion-title>Promise-Objekt mit Pipe auflösen</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
